--- a/specs.html
+++ b/specs.html
@@ -6,7 +6,7 @@
     <style type="text/css">
     </style>
 
-    <title>Jasmine Spec Runner</title>
+    <title>MegaUni Specs</title>
 
 
     <link rel="shortcut icon" type="image/png" href="./scripts/jasmine/images/jasmine_favicon.png">
@@ -22,6 +22,7 @@
 
   <script src="./scripts/jquery/dist/jquery.min.js"></script>
   <script src="./scripts/lodash/lodash.min.js"></script>
+  <script src="./scripts/da99.applet.js/applet.js"></script>
 
   <script src="./megauni.js""></script>
   <script src="./specs.js"></script>
