--- a/specs.html
+++ b/specs.html
@@ -22,6 +22,10 @@
 
   <script src="./scripts/jquery/dist/jquery.min.js"></script>
   <script src="./scripts/lodash/lodash.min.js"></script>
+
+  <script src="./scripts/hogan.js/lib/template.js"></script>
+  <script src="./scripts/hogan.js/lib/compiler.js"></script>
+
   <script src="./scripts/da99.applet.js/applet.js"></script>
 
   <script src="./megauni.js""></script>
