Added: form, button.submit handling

--- a/specs.html
+++ b/specs.html
@@ -21,6 +21,7 @@
   <script src="./scripts/jasmine/lib/jasmine-core/boot.js"></script>
 
   <script src="./scripts/jquery/dist/jquery.min.js"></script>
+  <script src="./scripts/jquery.serializeJSON/jquery.serializejson.min.js"></script>
   <script src="./scripts/lodash/lodash.min.js"></script>
 
   <script src="./scripts/hogan.js/lib/template.js"></script>
