--- a/specs.html
+++ b/specs.html
@@ -2,15 +2,13 @@
   <head>
 
     <meta charset="utf-8">
-
-    <style type="text/css">
-    </style>
-
     <title>MegaUni Specs</title>
 
+    <link rel="shortcut icon" type="image/png"             href="./scripts/jasmine/images/jasmine_favicon.png">
+    <link rel="stylesheet"    type="text/css"  media="all" href="./css/vanilla.reset.css" />
+    <link rel="stylesheet"    type="text/css"  media="all" href="./scripts/jasmine/lib/jasmine-core/jasmine.css">
 
-    <link rel="shortcut icon" type="image/png" href="./scripts/jasmine/images/jasmine_favicon.png">
-    <link rel="stylesheet"                     href="./scripts/jasmine/lib/jasmine-core/jasmine.css">
+    <style type="text/css"></style>
 
   </head>
 
