--- a/Public/index.html
+++ b/Public/index.html
@@ -1,69 +1,61 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="/css/vanilla.reset.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="/css/fonts.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="/css/otfpoc.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="/applets/MUE/style.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="/applets/homepage/style.css" media="all" rel="stylesheet" type="text/css" />
-    <title>megaUNI Home</title>
-  </head>
-  <body>
-    
+<head>
+  <link href="/css/vanilla.reset.css" media="all" rel="stylesheet" type="text/css">
+  <link href="/css/fonts.css" media="all" rel="stylesheet" type="text/css">
+  <link href="/css/otfpoc.css" media="all" rel="stylesheet" type="text/css">
+  <link href="/applets/MUE/style.css" media="all" rel="stylesheet" type="text/css">
+  <link href="/applets/homepage/style.css" media="all" rel="stylesheet" type="text/css">
+  <title>megaUNI Home</title>
+</head>
+<body>
+  <script id="Welcome" type="text/applet">
 
-
-        <script id="Welcome" type="text/applet"> 
-          <div class="block" show_if="logged_in?">
-            <p>You are logged in.</p>
-          </div>
-        </script>
-        <script id="New_Session" type="text/applet">
-          <div class="block" show_if="!logged_in?">
-            <h3>Log-In</h3>
-            <div class="content">
-              <form action="/sign-in" id="sign_in" method="post">
-                <div class="fields">
-                  <div class="field screen_name"><label for="LOGIN_SCREEN_NAME">Screen name:</label><input name="screen_name" type="text" value=""/></div>
-                  <div class="field passphrase"><label for="LOGIN_PASS_PHRASE">Pass phrase:</label><input name="pswd" type="password" value=""/></div>
-                  <div class="field buttons"><button class="submit">Log-In</button></div>
-                </div>
-              </form>
-            </div>
-          </div>
-        </script>
-        <script id="New_Customer" type="text/applet">
-          <div class="block" show_if="!logged_in?">
-            <h3>Create a New Account</h3>
-            <div class="content">
-              <form action="/user" id="create_account" method="post">
-                <div class="fields">
-                  <div class="field screen_name"><label for="NEW_CUSTOMER_SCREEN_NAME">Screen name:</label><input name="screen_name" type="text" value=""/></div>
-                  <div class="field pswd"><label for="NEW_CUSTOMER_PASS_PHRASE"><span class="main">Pass phrase</span><span class="sub"> (for better security, use spaces and words)</span><span class="main">:</span></label><input name="pswd" type="password" value=""/></div>
-                  <div class="field confirm_pass_phrase"><label for="NEW_CUSTOMER_CONFIRM_PASS_PHRASE"><span class="main">Re-type the pass phrase:</span></label><input name="confirm_pass_word" type="password" value=""/></div>
-                  <div class="buttons"><input name="_csrf" type="hidden" value="{{_csrf}}"/><button class="submit">Create Account</button></div>
-                </div>
-              </form>
-            </div>
-          </div>
-        </script>
-        <div class="block" id="intro">
-          <h1 class="site"><span class="main">mega</span><span class="sub">UNI</span></h1>
-          <p><a href="/home">/home</a></p>
-          <p><a href="/@da99">/@da99</a></p>
-          <p><a href="/!4567">/!4567</a></p>
-          <p><a href="/nowhere">/nowhere</a></p>
-          <div class="disclaimer">
-            <p>
-              &amp;copy; 2012-<span id="copyright_year_today">2015</span> megauni.com. Some rights reserved.
-            </p>
-            <p>All other copyrights belong to their respective owners, who have no association to this site:</p>
-            <p><span>Logo font: </span><a href="http://openfontlibrary.org/en/font/otfpoc">Aghja</a></p>
-            <p><span>Palettes: </span><a href="http://www.colourlovers.com/lover/dvdcpd">dvdcpd</a><a href="http://www.colourlovers.com/palette/154398/bedouin">shari_foru</a></p>
-          </div>
-        </div>
-    <script src="/scripts/jquery/dist/jquery.min.js"></script>
-    <script src="/scripts/lodash/lodash.min.js"></script>
-    <script src="/scripts/da99.applet.js/applet.js"></script>
-  </body>
+          &#x3C;div class=&#x22;block&#x22; show_if=&#x22;logged_in?&#x22;&#x3E;
+            &#x3C;p&#x3E;You are logged in.&#x3C;/p&#x3E;
+          &#x3C;/div&#x3E;
+  </script> 
+  <script id="New_Session" type="text/applet">
+          &#x3C;div class=&#x22;block&#x22; show_if=&#x22;!logged_in?&#x22;&#x3E;
+            &#x3C;h3&#x3E;Log-In&#x3C;/h3&#x3E;
+            &#x3C;div class=&#x22;content&#x22;&#x3E;
+              &#x3C;form action=&#x22;/sign-in&#x22; id=&#x22;sign_in&#x22; method=&#x22;post&#x22;&#x3E;
+                &#x3C;div class=&#x22;fields&#x22;&#x3E;
+                  &#x3C;div class=&#x22;field screen_name&#x22;&#x3E;&#x3C;label for=&#x22;LOGIN_SCREEN_NAME&#x22;&#x3E;Screen name:&#x3C;/label&#x3E;&#x3C;input name=&#x22;screen_name&#x22; type=&#x22;text&#x22; value=&#x22;&#x22;&#x3E;&#x3C;/div&#x3E;
+                  &#x3C;div class=&#x22;field passphrase&#x22;&#x3E;&#x3C;label for=&#x22;LOGIN_PASS_PHRASE&#x22;&#x3E;Pass phrase:&#x3C;/label&#x3E;&#x3C;input name=&#x22;pswd&#x22; type=&#x22;password&#x22; value=&#x22;&#x22;&#x3E;&#x3C;/div&#x3E;
+                  &#x3C;div class=&#x22;field buttons&#x22;&#x3E;&#x3C;button class=&#x22;submit&#x22;&#x3E;Log-In&#x3C;/button&#x3E;&#x3C;/div&#x3E;
+                &#x3C;/div&#x3E;
+              &#x3C;/form&#x3E;
+            &#x3C;/div&#x3E;
+          &#x3C;/div&#x3E;
+  </script> 
+  <script id="New_Customer" type="text/applet">
+          &#x3C;div class=&#x22;block&#x22; show_if=&#x22;!logged_in?&#x22;&#x3E;
+            &#x3C;h3&#x3E;Create a New Account&#x3C;/h3&#x3E;
+            &#x3C;div class=&#x22;content&#x22;&#x3E;
+              &#x3C;form action=&#x22;/user&#x22; id=&#x22;create_account&#x22; method=&#x22;post&#x22;&#x3E;
+                &#x3C;div class=&#x22;fields&#x22;&#x3E;
+                  &#x3C;div class=&#x22;field screen_name&#x22;&#x3E;&#x3C;label for=&#x22;NEW_CUSTOMER_SCREEN_NAME&#x22;&#x3E;Screen name:&#x3C;/label&#x3E;&#x3C;input name=&#x22;screen_name&#x22; type=&#x22;text&#x22; value=&#x22;&#x22;&#x3E;&#x3C;/div&#x3E;
+                  &#x3C;div class=&#x22;field pswd&#x22;&#x3E;&#x3C;label for=&#x22;NEW_CUSTOMER_PASS_PHRASE&#x22;&#x3E;&#x3C;span class=&#x22;main&#x22;&#x3E;Pass phrase&#x3C;/span&#x3E;&#x3C;span class=&#x22;sub&#x22;&#x3E; (for better security, use spaces and words)&#x3C;/span&#x3E;&#x3C;span class=&#x22;main&#x22;&#x3E;:&#x3C;/span&#x3E;&#x3C;/label&#x3E;&#x3C;input name=&#x22;pswd&#x22; type=&#x22;password&#x22; value=&#x22;&#x22;&#x3E;&#x3C;/div&#x3E;
+                  &#x3C;div class=&#x22;field confirm_pass_phrase&#x22;&#x3E;&#x3C;label for=&#x22;NEW_CUSTOMER_CONFIRM_PASS_PHRASE&#x22;&#x3E;&#x3C;span class=&#x22;main&#x22;&#x3E;Re-type the pass phrase:&#x3C;/span&#x3E;&#x3C;/label&#x3E;&#x3C;input name=&#x22;confirm_pass_word&#x22; type=&#x22;password&#x22; value=&#x22;&#x22;&#x3E;&#x3C;/div&#x3E;
+                  &#x3C;div class=&#x22;buttons&#x22;&#x3E;&#x3C;input name=&#x22;_csrf&#x22; type=&#x22;hidden&#x22; value=&#x22;{{_csrf}}&#x22;&#x3E;&#x3C;button class=&#x22;submit&#x22;&#x3E;Create Account&#x3C;/button&#x3E;&#x3C;/div&#x3E;
+                &#x3C;/div&#x3E;
+              &#x3C;/form&#x3E;
+            &#x3C;/div&#x3E;
+          &#x3C;/div&#x3E;
+  </script>
+  <div class="block" id="intro">
+    <h1 class="site"><span class="main">mega</span><span class="sub">UNI</span></h1>
+    <p><a href="/home">/home</a></p>
+    <p><a href="/@da99">/@da99</a></p>
+    <p><a href="/!4567">/!4567</a></p>
+    <p><a href="/nowhere">/nowhere</a></p>
+    <div class="disclaimer">
+      <p>(c) 2012-<span id="copyright_year_today">2015</span> megauni.com. Some rights reserved.</p>
+      <p>All other copyrights belong to their respective owners, who have no association to this site:</p>
+      <p><span>Logo font:</span> <a href="http://openfontlibrary.org/en/font/otfpoc">Aghja</a></p>
+      <p><span>Palettes:</span> <a href="http://www.colourlovers.com/lover/dvdcpd">dvdcpd</a><a href="http://www.colourlovers.com/palette/154398/bedouin">shari_foru</a></p>
+    </div>
+  </div><script src="/scripts/jquery/dist/jquery.min.js"></script> <script src="/scripts/lodash/lodash.min.js"></script> <script src="/scripts/da99.applet.js/applet.js"></script>
+</body>
 </html>
-
