--- a/Public/index.html
+++ b/Public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="/css/vanilla.reset.css" media="all" rel="stylesheet" type="text/css">
-  <link href="/css/fonts.css" media="all" rel="stylesheet" type="text/css">
-  <link href="/css/otfpoc.css" media="all" rel="stylesheet" type="text/css">
+  <link href="/styles/vanilla.reset.css" media="all" rel="stylesheet" type="text/css">
+  <link href="/styles/fonts.css" media="all" rel="stylesheet" type="text/css">
+  <link href="/styles/otfpoc.css" media="all" rel="stylesheet" type="text/css">
   <link href="/applets/MUE/style.css" media="all" rel="stylesheet" type="text/css">
   <link href="/applets/homepage/style.css" media="all" rel="stylesheet" type="text/css">
   <title>megaUNI Home</title>
@@ -56,6 +56,6 @@
       <p><span>Logo font:</span> <a href="http://openfontlibrary.org/en/font/otfpoc">Aghja</a></p>
       <p><span>Palettes:</span> <a href="http://www.colourlovers.com/lover/dvdcpd">dvdcpd</a><a href="http://www.colourlovers.com/palette/154398/bedouin">shari_foru</a></p>
     </div>
-  </div><script src="/scripts/jquery/dist/jquery.min.js"></script> <script src="/scripts/lodash/lodash.min.js"></script> <script src="/scripts/da99.applet.js/applet.js"></script>
+  </div><script src="/vendor/bower/jquery/dist/jquery.min.js"></script> <script src="/vendor/bower/lodash/lodash.min.js"></script> <script src="/vendor/bower/da99.applet.js/applet.js"></script>
 </body>
 </html>
