--- a/Public/index.html
+++ b/Public/index.html
@@ -9,6 +9,10 @@
   <title></title>
 </head>
 <body>
+  <!-- title : "megaUNI Home" -->
+  <!-- scripts
+      <script src="/applets/homepage/script.js"></script>
+    //-->
   <div class="hidden block" data-show_if="logged_in?">
     <p>You are logged in.</p>
   </div>
@@ -69,6 +73,6 @@
       <p><span>Logo font:</span> <a href="http://openfontlibrary.org/en/font/otfpoc">Aghja</a></p>
       <p><span>Palettes:</span> <a href="http://www.colourlovers.com/lover/dvdcpd">dvdcpd</a><a href="http://www.colourlovers.com/palette/154398/bedouin">shari_foru</a></p>
     </div>
-  </div><script src="/vendor/bower/jquery/dist/jquery.min.js"></script> <script src="/vendor/bower/lodash/lodash.min.js"></script> <script src="/vendor/bower/da99.applet.js/applet.js"></script> <script src="/applets/homepage/script.js"></script>
+  </div><script src="/vendor/bower/jquery/dist/jquery.min.js"></script> <script src="/vendor/bower/lodash/lodash.min.js"></script> <script src="/vendor/bower/da99.applet.js/applet.js"></script>
 </body>
 </html>
