Added: PUBLIC FILE option to templates

--- a/Public/index.html
+++ b/Public/index.html
@@ -9,6 +9,9 @@
   <title>megaUNI Home</title>
 </head>
 <body>
+  <!-- PUBLIC FILE
+      /index.html
+    -->
   <!-- title
       megaUNI Home
     -->
