--- a/Public/index.html
+++ b/Public/index.html
@@ -18,6 +18,9 @@
   <!-- scripts
       <script src="/applets/homepage/script.js"></script>
     -->
+  <div id="loading" data-hide_if="key? logged_in?">
+    Loading...
+  </div>
   <div class="hidden block" data-show_if="logged_in?">
     <p>You are logged in.</p>
   </div>
@@ -60,10 +63,6 @@
       </form>
     </div>
   </div>
-  <script type="text/template">
-    &#x3C;!-- template --&#x3E;
-          &#x3C;div&#x3E;code&#x3C;/div&#x3E;
-  </script>
   <div class="block" id="intro">
     <h1 class="site"><span class="main">mega</span><span class="sub">UNI</span></h1>
     <p><a href="/home">/home</a></p>
