Touchups and fixes.

--- a/Public/index.html
+++ b/Public/index.html
@@ -18,7 +18,7 @@
   <!-- scripts
       <script src="/applets/homepage/script.js"></script>
     -->
-  <div id="loading" data-hide_if="key? logged_in?">
+  <div id="loading" data-hide_if="page_loaded?">
     Loading...
   </div>
   <div class="hidden block" data-show_if="logged_in?">
