--- a/Public/index.html
+++ b/Public/index.html
@@ -30,10 +30,10 @@
       <form action="/sign-in" id="sign_in" method="post" name="sign_in">
         <div class="fields">
           <div class="field screen_name">
-            <label for="LOGIN_SCREEN_NAME">Screen name:</label><input name="screen_name" type="text" value="">
+            <label>Screen name:</label><input name="screen_name" type="text" value="">
           </div>
           <div class="field passphrase">
-            <label for="LOGIN_PASS_PHRASE">Pass phrase:</label><input name="pswd" type="password" value="">
+            <label>Pass phrase:</label><input name="pswd" type="password" value="">
           </div>
           <div class="field buttons">
             <button class="submit">Log-In</button>
@@ -48,13 +48,13 @@
       <form action="/user" id="create_account" method="post" name="create_account">
         <div class="fields">
           <div class="field screen_name">
-            <label for="NEW_CUSTOMER_SCREEN_NAME">Screen name:</label><input name="screen_name" type="text" value="">
+            <label>Screen name:</label><input name="screen_name" type="text" value="">
           </div>
           <div class="field pswd">
-            <label for="NEW_CUSTOMER_PASS_PHRASE"><span class="main">Pass phrase</span> <span class="sub">(for better security, use spaces and words)</span><span class="main">:</span></label><input name="pswd" type="password" value="">
+            <label><span class="main">Pass phrase</span> <span class="sub">(for better security, use spaces and words)</span> <span class="main">:</span></label> <input name="pswd" type="password" value="">
           </div>
           <div class="field confirm_pass_phrase">
-            <label for="NEW_CUSTOMER_CONFIRM_PASS_PHRASE"><span class="main">Re-type the pass phrase:</span></label><input name="confirm_pass_word" type="password" value="">
+            <label><span class="main">Re-type the pass phrase:</span></label><input name="confirm_pass_word" type="password" value="">
           </div>
           <div class="buttons">
             <input name="_csrf" type="hidden" value="{{_csrf}}"><button class="submit">Create Account</button>
