Fixed: paths. Deleted: obsolete file

--- a/specs/specs.html
+++ b/specs/specs.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>MegaUni Specs</title>
 
-    <link rel="shortcut icon" type="image/png"             href="./scripts/jasmine/images/jasmine_favicon.png">
-    <link rel="stylesheet"    type="text/css"  media="all" href="./css/vanilla.reset.css" />
-    <link rel="stylesheet"    type="text/css"  media="all" href="./scripts/jasmine/lib/jasmine-core/jasmine.css">
+    <link rel="shortcut icon" type="image/png"             href="../Public/vendor/bower/jasmine/images/jasmine_favicon.png">
+    <link rel="stylesheet"    type="text/css"  media="all" href="../Public/styles/vanilla.reset.css" />
+    <link rel="stylesheet"    type="text/css"  media="all" href="../Public/vendor/bower/jasmine/lib/jasmine-core/jasmine.css">
 
     <style type="text/css"></style>
 
@@ -14,19 +14,19 @@
 
   <body><div id="THE_STAGE"></div></body>
 
-  <script src="./scripts/jasmine/lib/jasmine-core/jasmine.js"></script>
-  <script src="./scripts/jasmine/lib/jasmine-core/jasmine-html.js"></script>
-  <script src="./scripts/jasmine/lib/jasmine-core/boot.js"></script>
+  <script src="../Public/vendor/bower/jasmine/lib/jasmine-core/jasmine.js"></script>
+  <script src="../Public/vendor/bower/jasmine/lib/jasmine-core/jasmine-html.js"></script>
+  <script src="../Public/vendor/bower/jasmine/lib/jasmine-core/boot.js"></script>
 
-  <script src="./scripts/jquery/dist/jquery.min.js"></script>
-  <script src="./scripts/jquery.serializeJSON/jquery.serializejson.min.js"></script>
-  <script src="./scripts/lodash/lodash.min.js"></script>
+  <script src="../Public/vendor/bower/jquery/dist/jquery.min.js"></script>
+  <script src="../Public/vendor/bower/jquery.serializeJSON/jquery.serializejson.min.js"></script>
+  <script src="../Public/vendor/bower/lodash/lodash.min.js"></script>
 
-  <script src="./scripts/hogan.js/lib/template.js"></script>
-  <script src="./scripts/hogan.js/lib/compiler.js"></script>
+  <script src="../Public/vendor/bower/hogan.js/lib/template.js"></script>
+  <script src="../Public/vendor/bower/hogan.js/lib/compiler.js"></script>
 
-  <script src="./scripts/da99.applet.js/applet.js"></script>
+  <script src="../Public/vendor/bower/da99.applet.js/applet.js"></script>
 
-  <script src="./megauni.js""></script>
+  <!-- <script src="../megauni.js""></script> -->
   <script src="./specs.js"></script>
 </html>
