--- a/Public/index.html
+++ b/Public/index.html
@@ -48,7 +48,7 @@
       <form action="/user" id="create_account" method="post" name="create_account">
         <div class="fields">
           <div class="field screen_name">
-            <label>Screen name:</label><input name="screen_name" type="text" value="">
+            <label>Screen name:</label> <input name="screen_name" type="text" value="">
           </div>
           <div class="field pswd">
             <label><span class="main">Pass phrase</span> <span class="sub">(for better security, use spaces and words)</span> <span class="main">:</span></label> <input name="pswd" type="password" value="">
@@ -85,6 +85,8 @@
   <script src="/vendor/bower/promisejs/promise.min.js">
   </script> 
   <script src="/vendor/bower/da99.applet.js/applet.js">
+  </script> 
+  <script src="/scripts/megauni.js">
   </script> 
   <script src="/applets/homepage/script.js">
   </script>
