--- a/Public/google9c798b9bb92ab14f.html
+++ b/Public/google9c798b9bb92ab14f.html
@@ -1,1 +1,9 @@
-google-site-verification: google9c798b9bb92ab14f.html
+<!DOCTYPE html>
+<html>
+<head>
+  <title></title>
+</head>
+<body>
+  google-site-verification: google9c798b9bb92ab14f.html
+</body>
+</html>
