--- a/Public/500.html
+++ b/Public/500.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-  <head>
-    <title>NOTE: Programming Error</title>
-    <style type="text/css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>NOTE: Programming Error</title>
+  <style type="text/css">
+  /*<![CDATA[*/
     <!--
         a:link, a:visited {
             color: #F00919;
@@ -47,32 +48,36 @@
           font-size: 28px;
         }
     //-->
-    </style>
-
-  </head>
-  <body id="busy_body">
-    	<div id="busy_container">
-    		<h1>Error: </h1>
-				<h2>You found a bug in this website.</h2>
-				<p id="status_msg">Check back later today or tomorrow after the error is fixed.</p>
-				<div class="href"><script>
-				  document.writeln(window.location.href);
-				</script></div>
-        <p><a href="/">Homepage.</a></p>
-    	</div>
-
-      <!-- start Mixpanel -->
-      <script type="text/javascript">(function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");
-for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="//cdn.mxpnl.com/libs/mixpanel-2.2.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
-      mixpanel.init("86bbd0a09d702cd9eef7ba93d59dca93");</script>
-      <script type="text/javascript">
+  /*]]>*/
+  </style>
+</head>
+<body id="busy_body">
+  <div id="busy_container">
+    <h1>Error:</h1>
+    <h2>You found a bug in this website.</h2>
+    <p id="status_msg">Check back later today or tomorrow after the error is fixed.</p>
+    <div class="href">
+      <script>
+      <![CDATA[
+                                  document.writeln(window.location.href);
+      ]]>
+      </script>
+    </div>
+    <p><a href="/">Homepage.</a></p>
+  </div><!-- start Mixpanel -->
+  <script type="text/javascript">
+  //<![CDATA[
+  (function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");
+  for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="//cdn.mxpnl.com/libs/mixpanel-2.2.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
+      mixpanel.init("86bbd0a09d702cd9eef7ba93d59dca93");
+  //]]>
+  </script> 
+  <script type="text/javascript">
+  //<![CDATA[
         mixpanel.track("500 error", {
           "page": window.location.href
         });
-      </script>
-      <!-- end Mixpanel -->
-
-
-
-  </body>
+  //]]>
+  </script> <!-- end Mixpanel -->
+</body>
 </html>
