Dev. checkpoint: Touchups: To error pages

--- a/Public/404.html
+++ b/Public/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Error: Page Not Found</title>
-  <link href="/styles/error.css" media="all" rel="stylesheet" type="text/css">
+  <link href="/styles/404.css" media="all" rel="stylesheet" type="text/css">
 </head>
 <body id="busy_body">
   <div id="busy_container">
