--- a/Public/index.html
+++ b/Public/index.html
@@ -36,7 +36,13 @@
           &#x3C;div class=&#x22;block form&#x22;&#x3E;
             &#x3C;h3&#x3E;Log-In&#x3C;/h3&#x3E;
             &#x3C;div class=&#x22;content&#x22;&#x3E;
-              &#x3C;form action=&#x22;/sign-in&#x22; id=&#x22;sign_in&#x22; method=&#x22;post&#x22; data-on_respond_ok=&#x22;wait_a_few, reload&#x22;&#x3E;
+              &#x3C;form
+                 action=&#x22;/sign-in&#x22;
+                 id=&#x22;sign_in&#x22;
+                 method=&#x22;post&#x22;
+                 data-on_send=&#x22;hide_buttons&#x22;
+                 data-on_respond_ok=&#x22;reset, wait_a_few, reload&#x22;
+                 &#x3E;
                 &#x3C;div class=&#x22;fields&#x22;&#x3E;
                   &#x3C;div class=&#x22;field screen_name&#x22;&#x3E;&#x3C;label&#x3E;Screen name:&#x3C;/label&#x3E;&#x3C;input name=&#x22;screen_name&#x22; type=&#x22;text&#x22; value=&#x22;&#x22; /&#x3E;&#x3C;/div&#x3E;
                   &#x3C;div class=&#x22;field passphrase&#x22;&#x3E;&#x3C;label&#x3E;Pass phrase:&#x3C;/label&#x3E;&#x3C;input name=&#x22;pswd&#x22; type=&#x22;password&#x22; value=&#x22;&#x22; /&#x3E;&#x3C;/div&#x3E;
@@ -53,7 +59,7 @@
   <div class="block form">
     <h3>Create a New Account</h3>
     <div class="content">
-      <form action="/user" id="create_account" method="post" data-on_respond_ok="wait_a_few, reload" name="create_account">
+      <form action="/user" id="create_account" method="post" data-on_send="hide_buttons" data-on_respond_ok="reset, wait_a_few, reload" name="create_account">
         <div class="fields">
           <div class="field screen_name">
             <label>Screen name:</label> <input name="screen_name" type="text" value="">
