Finished: Babel used, Typescript dropped. New Applet.js

--- a/Public/index.html
+++ b/Public/index.html
@@ -104,7 +104,7 @@
   </script> 
   <script src="/vendor/bower/promisejs/promise.min.js">
   </script> 
-  <script src="/vendor/bower/da99.applet.js/applet.js">
+  <script src="/scripts/applet.js">
   </script> 
   <script src="/scripts/megauni.js">
   </script> 
