--- a/Public/index.html
+++ b/Public/index.html
@@ -17,7 +17,7 @@
       megaUNI Home
     -->
   <!-- scripts
-      <script src="/applets/homepage/script.js"></script>
+      <script src="/applets/homepage/script.babel.js"></script>
     -->
   <!-- meta
       <meta name="Description" CONTENT="Sign-In or Create an Account if you don't have one." />
@@ -104,11 +104,11 @@
   </script> 
   <script src="/vendor/bower/promisejs/promise.min.js">
   </script> 
-  <script src="/scripts/applet.js">
+  <script src="/scripts/applet.babel.js">
   </script> 
-  <script src="/scripts/megauni.js">
+  <script src="/scripts/megauni.babel.js">
   </script> 
-  <script src="/applets/homepage/script.js">
+  <script src="/applets/homepage/script.babel.js">
   </script>
 </body>
 </html>
