--- a/bin/megauni.html
+++ b/bin/megauni.html
@@ -8,6 +8,7 @@
 IS_DEPLOY="$IS_DEPLOY"
 orig_args=("$@")
 action="$1"
+THIS_DIR="$(bash_setup dirname_of_bin "$0")"
 shift
 
 set -u -e -o pipefail
@@ -398,8 +399,15 @@ case "$action" in
     ;;
 
   *)
-    # === $ bin/megauni.html bower ...
+    # === IF: bin/lib file:
+    func_file="$THIS_DIR/bin/lib/${action}.sh"
+    if [[ -s "$func_file" ]]; then
+      source "$func_file"
+      "$action" $@
+      exit 0
+    fi
 
+    # === $ bin/megauni.html bower ...
     file="$( echo node_modules/*/bin/$action )"
 
     if [[ -f "$file"  ]]; then
