--- a/bin/megauni.html
+++ b/bin/megauni.html
@@ -9,15 +9,15 @@ IS_DEPLOY="$IS_DEPLOY"
 orig_args=("$@")
 action="$1"
 THIS_DIR="$(bash_setup dirname_of_bin "$0")"
-LUAJIT="luajit"
+LUAJIT="$THIS_DIR/luajit"
 shift
 
 set -u -e -o pipefail
 
 eval "$(bash_setup show_err_line_trap)"
 
-if [[ -s luajit/bin/luarocks ]]; then
-  eval $(luajit/bin/luarocks path --bin)
+if [[ -s $LUAJIT/bin/luarocks ]]; then
+  eval $($LUAJIT/bin/luarocks path --bin)
 fi
 
 layout="Public/applets/MUE/layout.mustache"
@@ -420,8 +420,8 @@ case "$action" in
       exit 0
     fi
 
-    if type "$1"; then
-      $@
+    if which "$action" >/dev/null; then
+      $action $@
       exit 0
     fi
 
