--- a/bin/megauni.html
+++ b/bin/megauni.html
@@ -17,10 +17,6 @@ set -u -e -o pipefail
 
 eval "$(bash_setup show_err_line_trap)"
 
-export PATH="$PWD/progs/bin:$PATH"
-if [[ -s $LUAJIT/bin/luarocks ]]; then
-  eval $($LUAJIT/bin/luarocks path --bin)
-fi
 
 layout="Public/applets/MUE/layout.mustache"
 error_files=(
@@ -406,6 +402,11 @@ case "$action" in
     ;;
 
   *)
+    export PATH="$PWD/progs/bin:$PATH"
+    if [[ -s $LUAJIT/bin/luarocks ]]; then
+      eval $($LUAJIT/bin/luarocks path --bin)
+    fi
+
     # === IF: bin/lib file:
     func_file="$THIS_DIR/bin/lib/${action}.sh"
     if [[ -s "$func_file" ]]; then
@@ -422,7 +423,7 @@ case "$action" in
       exit 0
     fi
 
-    if which "$action" >/dev/null; then
+    if [[ -f "progs/bin/$action" ]]; then
       $action $@
       exit 0
     fi
