--- a/bin/megauni.html
+++ b/bin/megauni.html
@@ -43,7 +43,7 @@ case "$action" in
 
   "help"|"--help")
     bash_setup BOLD "==== megauni.html  {{lua-bin-cmd}}  myargs"
-    bash_setup print_help $0
+    mksh_setup print-help $0
     exit 0
     ;;
 
